--- a/index.html
+++ b/index.html
@@ -56,6 +56,24 @@
                     <li>
                         <a href="contact.html">Contact</a>
                     </li>
+					
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">User <b class="caret"></b></a>
+                        <ul class="dropdown-menu">
+                            <li>
+                                <a href="portfolio-1-col.html">Profile</a>
+                            </li>
+                            <li>
+                                <a href="portfolio-2-col.html">My Activities</a>
+                            </li>
+                            <li>
+                                <a href="portfolio-3-col.html">Settings</a>
+                            </li>
+                            <li>
+                                <a href="portfolio-4-col.html">Logout </a>
+                            </li>
+                        </ul>
+                    </li>
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
@@ -148,25 +166,35 @@
 		<h1>Vacancies</h1>
         <!-- Projects Row -->
         <div class="row">
-            <div class="col-md-3 img-portfolio">
-                <a href="portfolio-item.html">
-                    <img class="img-responsive img-hover" src="http://placehold.it/450x450" alt="">
-                </a>
+            <div class="col-md-4 text-center">
+                <div class="thumbnail">
+                    <div class="caption">
+                        <h3>John Smith<br>
+                            <small>Job Title</small>
+                        </h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste saepe et quisquam nesciunt maxime.</p>
+                    </div>
+                </div>
             </div>
-            <div class="col-md-3 img-portfolio">
-                <a href="portfolio-item.html">
-                    <img class="img-responsive img-hover" src="http://placehold.it/450x450" alt="">
-                </a>
+            <div class="col-md-4 text-center">
+                <div class="thumbnail">
+                    <div class="caption">
+                        <h3>John Smith<br>
+                            <small>Job Title</small>
+                        </h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste saepe et quisquam nesciunt maxime.</p>
+                    </div>
+                </div>
             </div>
-            <div class="col-md-3 img-portfolio">
-                <a href="portfolio-item.html">
-                    <img class="img-responsive img-hover" src="http://placehold.it/450x450" alt="">
-                </a>
-            </div>
-            <div class="col-md-3 img-portfolio">
-                <a href="portfolio-item.html">
-                    <img class="img-responsive img-hover" src="http://placehold.it/450x450" alt="">
-                </a>
+            <div class="col-md-4 text-center">
+                <div class="thumbnail">
+                    <div class="caption">
+                        <h3>John Smith<br>
+                            <small>Job Title</small>
+                        </h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste saepe et quisquam nesciunt maxime.</p>
+                    </div>
+                </div>
             </div>
         </div>
         <!-- /.row -->
