Add a start to activities and vacancies
Also a test for a Twitter embed for someone, don't forget to take that
out

--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a href="about.html">Activities</a>
+                        <a href="activities.html">Activities</a>
                     </li>
                     <li>
-                        <a href="services.html">Vacancies</a>
+                        <a href="vacancies.html">Vacancies</a>
                     </li>
                     <li>
                         <a href="contact.html">Contact</a>
