Add activity, activity-item and contact
Finish the activity framework, activity-item framework and copy paste
contact (And make the Google Maps embedding use the address of ABN Amro,
very important stuff)

--- a/index.html
+++ b/index.html
@@ -61,16 +61,16 @@
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">User <b class="caret"></b></a>
                         <ul class="dropdown-menu">
                             <li>
-                                <a href="portfolio-1-col.html">Profile</a>
+                                <a href="profile.html">Profile</a>
                             </li>
                             <li>
-                                <a href="portfolio-2-col.html">My Activities</a>
+                                <a href="my_activities.html">My Activities</a>
                             </li>
                             <li>
-                                <a href="portfolio-3-col.html">Settings</a>
+                                <a href="#">Settings</a>
                             </li>
                             <li>
-                                <a href="portfolio-4-col.html">Logout </a>
+                                <a href="#">Logout </a>
                             </li>
                         </ul>
                     </li>
