--- a/vacancies.html
+++ b/vacancies.html
@@ -49,10 +49,10 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a href="about.html">Activities</a>
+                        <a href="activities.html">Activities</a>
                     </li>
                     <li>
-                        <a href="services.html">Vacancies</a>
+                        <a href="vacancies.html">Vacancies</a>
                     </li>
                     <li>
                         <a href="contact.html">Contact</a>
@@ -62,16 +62,16 @@
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">User <b class="caret"></b></a>
                         <ul class="dropdown-menu">
                             <li>
-                                <a href="portfolio-1-col.html">Profile</a>
+                                <a href="profile.html">Profile</a>
                             </li>
                             <li>
-                                <a href="portfolio-2-col.html">My Activities</a>
+                                <a href="my_activities.html">My Activities</a>
                             </li>
                             <li>
-                                <a href="portfolio-3-col.html">Settings</a>
+                                <a href="#">Settings</a>
                             </li>
                             <li>
-                                <a href="portfolio-4-col.html">Logout </a>
+                                <a href="#">Logout </a>
                             </li>
                         </ul>
                     </li>
