Do the same for Vacancies
A lot of images in all files still link to portfolio-item.html instead
of vacancy-item.html and activity-item.html. These need to be fixed soon

--- a/vacancies.html
+++ b/vacancies.html
@@ -104,7 +104,7 @@
 		<div class="thumbnail">
 			<div class="row">
 				<div class="col-md-3">
-					<a href="portfolio-item.html">
+					<a href="vacancy-item.html">
 						<img class="img-responsive img-hover" src="http://placehold.it/300x300" alt="">
 					</a>
 				</div>
@@ -112,7 +112,7 @@
 					<h3>Project One</h3>
 					<h4>Subheading</h4>
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium veniam exercitationem expedita laborum at voluptate. Labore, voluptates totam at aut nemo deserunt rem magni pariatur quos perspiciatis atque eveniet unde.</p>
-					<a class="btn btn-primary" href="portfolio-item.html">View Project</i></a>
+					<a class="btn btn-primary" href="vacancy-item.html">View Project</i></a>
 				</div>
 			</div>
 		</div>
@@ -120,10 +120,10 @@
 
         <hr>
         <!-- Project One -->
-        <div class="thumbnail">
+		<div class="thumbnail">
 			<div class="row">
 				<div class="col-md-3">
-					<a href="portfolio-item.html">
+					<a href="vacancy-item.html">
 						<img class="img-responsive img-hover" src="http://placehold.it/300x300" alt="">
 					</a>
 				</div>
@@ -131,7 +131,7 @@
 					<h3>Project One</h3>
 					<h4>Subheading</h4>
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium veniam exercitationem expedita laborum at voluptate. Labore, voluptates totam at aut nemo deserunt rem magni pariatur quos perspiciatis atque eveniet unde.</p>
-					<a class="btn btn-primary" href="portfolio-item.html">View Project</i></a>
+					<a class="btn btn-primary" href="vacancy-item.html">View Project</i></a>
 				</div>
 			</div>
 		</div>
@@ -140,10 +140,10 @@
         <hr>
 
                <!-- Project One -->
-        <div class="thumbnail">
+		<div class="thumbnail">
 			<div class="row">
 				<div class="col-md-3">
-					<a href="portfolio-item.html">
+					<a href="vacancy-item.html">
 						<img class="img-responsive img-hover" src="http://placehold.it/300x300" alt="">
 					</a>
 				</div>
@@ -151,7 +151,7 @@
 					<h3>Project One</h3>
 					<h4>Subheading</h4>
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium veniam exercitationem expedita laborum at voluptate. Labore, voluptates totam at aut nemo deserunt rem magni pariatur quos perspiciatis atque eveniet unde.</p>
-					<a class="btn btn-primary" href="portfolio-item.html">View Project</i></a>
+					<a class="btn btn-primary" href="vacancy-item.html">View Project</i></a>
 				</div>
 			</div>
 		</div>
