--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Talent Spotting test</title>
+    <title>Talent Spotting</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -94,19 +94,20 @@
             <div class="item active">
                 <div class="fill" style="background-image:url('http://placehold.it/1900x1080&text=Slide One');"></div>
                 <div class="carousel-caption">
-                    <h2>Caption 1</h2>
+                    <h2>Je eerste baan? Weet waaraan je begint!</h2>
                 </div>
             </div>
             <div class="item">
                 <div class="fill" style="background-image:url('http://placehold.it/1900x1080&text=Slide Two');"></div>
                 <div class="carousel-caption">
-                    <h2>Caption 2</h2>
+                    <h2>Inhousedag: Ontdek alles wat de bank jou te bieden heeft in één middag. </h2>
                 </div>
             </div>
             <div class="item">
                 <div class="fill" style="background-image:url('http://placehold.it/1900x1080&text=Slide Three');"></div>
                 <div class="carousel-caption">
-                    <h2>Caption 3</h2>
+                    <h2>Business Course: Los een realistisch financieringsvraagstuk op met je toekomstige collega’s. Laat je uitdagen!
+</h2>
                 </div>
             </div>
         </div>
@@ -132,33 +133,33 @@
                 <a href="portfolio-item.html">
                     <img class="img-responsive img-hover" src="http://placehold.it/450x450" alt="">
                 </a>
-			<h4> Title </h4>
-			<p> 18/05/2016, 18.30 <br />
-			Eindhoven </p>
+			<h4> Inhousedag </h4>
+			<p> 1 december 2016 <br />
+			ABN AMRO Eindhoven, Vestdijk 18. </p>
             </div>
             <div class="col-md-3 img-portfolio">
                 <a href="portfolio-item.html">
                     <img class="img-responsive img-hover" src="http://placehold.it/450x450" alt="">
                 </a>
-			<h4> Title </h4>
-			<p> 18/05/2016, 18.30 <br />
-			Eindhoven </p>
+			<h4> Business Course </h4>
+			<p> 15 november 2016 <br />
+			ABN AMRO Eindhoven, Vestdijk 18. </p>
             </div>
             <div class="col-md-3 img-portfolio">
                 <a href="portfolio-item.html">
                     <img class="img-responsive img-hover" src="http://placehold.it/450x450" alt="">
                 </a>
-			<h4> Title </h4>
-			<p> 18/05/2016, 18.30 <br />
-			Eindhoven </p>
+			<h4> Meet & Greet </h4>
+			<p> Op afspraakbasis <br />
+			Bij elk ABN Amro kantoor </p>
             </div>
             <div class="col-md-3 img-portfolio">
                 <a href="portfolio-item.html">
                     <img class="img-responsive img-hover" src="http://placehold.it/450x450" alt="">
                 </a>
-			<h4> Title </h4>
-			<p> 18/05/2016, 18.30 <br />
-			Eindhoven </p>
+			<h4> Hackathon </h4>
+			<p> 30 november 2016 <br />
+			ABN AMRO Eindhoven, Vestdijk 18. </p>
             </div>
         </div>
         <!-- /.row -->
