Make the registration forms

--- a/vacancy-item.html
+++ b/vacancy-item.html
@@ -112,6 +112,7 @@
 						<p>
 						Lots of text 
 						</p> 
+						<a class="btn btn-primary" href="vacancy-registration.html">Apply</i></a>
 					</div>
 				</div>
 				
