--- a/activities.html
+++ b/activities.html
@@ -9,7 +9,8 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Activities</title>
+    <title>Talent Spotting</title>
+    <link href="css/talent spotting.css" rel="stylesheet">
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -20,13 +21,15 @@
     <!-- Custom Fonts -->
     <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 
+
+
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
-
+	
 </head>
 
 <body>
@@ -109,9 +112,15 @@
 					</a>
 				</div>
 				<div class="col-md-7">
-					<h3>Project One</h3>
-					<h4>Subheading</h4>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium veniam exercitationem expedita laborum at voluptate. Labore, voluptates totam at aut nemo deserunt rem magni pariatur quos perspiciatis atque eveniet unde.</p>
+					<h3>Inhousedag</h3>
+					<h4>Ontdek alles wat de bank jou te bieden heeft in één middag. </h4>
+					<p>
+						Wil je weten wat ABN AMRO voor jou kan betekenen?  Bij een In House Day laten verschillende afdelingen zien waar ze mee bezig zijn. We beginnen met een rondleiding door het hoofdkantoor van de regio Zuid. Vervolgens word je aan de hand van diverse presentaties meegenomen in de werkzaamheden van afdelingen die hier gevestigd zijn.
+					</p>
+					<p>
+					Wanneer: 1 december 2016
+					<br>Waar: ABN AMRO Eindhoven, Vestdijk 18.
+					</p>
 					<a class="btn btn-primary" href="activity-item.html">View Project</i></a>
 				</div>
 			</div>
