--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <meta name="author" content="">
 
     <title>Talent Spotting</title>
+    <link href="css/talent spotting.css" rel="stylesheet">
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -20,13 +21,15 @@
     <!-- Custom Fonts -->
     <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 
+
+
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
-
+	
 </head>
 
 <body>
@@ -123,10 +126,15 @@
 	
     <!-- Page Content -->
     <div class="container">
-		
+    
+    	<div class="section-title">
+			<h3> 
+				<a href="activities.html">
+					Activities 
+				</a>
+			</h3>
+		</div>
 
-		<h1> Activities </h1>
-		
         <!-- Projects Row -->
         <div class="row">
             <div class="col-md-3 img-portfolio">
@@ -134,37 +142,43 @@
                     <img class="img-responsive img-hover" src="http://placehold.it/450x450" alt="">
                 </a>
 			<h4> Inhousedag </h4>
-			<p> 1 december 2016 <br />
-			ABN AMRO Eindhoven, Vestdijk 18. </p>
+			<p> <i class="fa fa-calendar-o" aria-hidden="true"></i>   1 december 2016 <br />
+			<i class="fa fa-thumb-tack" aria-hidden="true"></i>   ABN AMRO Eindhoven, Vestdijk 18. </p>
             </div>
             <div class="col-md-3 img-portfolio">
                 <a href="portfolio-item.html">
                     <img class="img-responsive img-hover" src="http://placehold.it/450x450" alt="">
                 </a>
 			<h4> Business Course </h4>
-			<p> 15 november 2016 <br />
-			ABN AMRO Eindhoven, Vestdijk 18. </p>
+			<p> <i class="fa fa-calendar-o" aria-hidden="true"></i>   15 november 2016 <br />
+			<i class="fa fa-thumb-tack" aria-hidden="true"></i>   ABN AMRO Eindhoven, Vestdijk 18. </p>
             </div>
-            <div class="col-md-3 img-portfolio">
+            <div class="col-md-3 img-portfolio " background-color="111111">
                 <a href="portfolio-item.html">
                     <img class="img-responsive img-hover" src="http://placehold.it/450x450" alt="">
                 </a>
 			<h4> Meet & Greet </h4>
-			<p> Op afspraakbasis <br />
-			Bij elk ABN Amro kantoor </p>
+			<p> <i class="fa fa-calendar-o" aria-hidden="true"></i>   Op afspraakbasis <br />
+			<i class="fa fa-thumb-tack" aria-hidden="true"></i>   Bij elk ABN Amro kantoor </p>
             </div>
             <div class="col-md-3 img-portfolio">
                 <a href="portfolio-item.html">
-                    <img class="img-responsive img-hover" src="http://placehold.it/450x450" alt="">
+                    <img class="img-responsive img-hover" src="images/meet & greet-square.jpg" alt="">
                 </a>
 			<h4> Hackathon </h4>
-			<p> 30 november 2016 <br />
-			ABN AMRO Eindhoven, Vestdijk 18. </p>
+			<p> <i class="fa fa-calendar-o" aria-hidden="true"></i>   30 november 2016 <br />
+			<i class="fa fa-thumb-tack" aria-hidden="true"></i>   ABN AMRO Eindhoven, Vestdijk 18. </p>
             </div>
         </div>
         <!-- /.row -->
-
-		<h1>Vacancies</h1>
+		<div class="section-title">
+			<h3> 
+				<a href="activities.html">
+					Vacancies 
+				</a>
+			</h3>
+		</div>
+		
         <!-- Projects Row -->
         <div class="row">
             <div class="col-md-4 text-center">
