Change home to 3 activities, make the form in vacancy mail

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 		
         <!-- Projects Row -->
         <div class="row">
-            <div class="col-md-3 img-portfolio">
+            <div class="col-md-4 img-portfolio">
                 <a href="portfolio-item.html">
                     <img class="img-responsive img-hover" src="http://placehold.it/450x450" alt="">
                 </a>
@@ -137,7 +137,7 @@
 			<p> 1 december 2016 <br />
 			ABN AMRO Eindhoven, Vestdijk 18. </p>
             </div>
-            <div class="col-md-3 img-portfolio">
+            <div class="col-md-4 img-portfolio">
                 <a href="portfolio-item.html">
                     <img class="img-responsive img-hover" src="http://placehold.it/450x450" alt="">
                 </a>
@@ -145,7 +145,7 @@
 			<p> 15 november 2016 <br />
 			ABN AMRO Eindhoven, Vestdijk 18. </p>
             </div>
-            <div class="col-md-3 img-portfolio">
+            <div class="col-md-4 img-portfolio">
                 <a href="portfolio-item.html">
                     <img class="img-responsive img-hover" src="http://placehold.it/450x450" alt="">
                 </a>
@@ -153,14 +153,14 @@
 			<p> Op afspraakbasis <br />
 			Bij elk ABN Amro kantoor </p>
             </div>
-            <div class="col-md-3 img-portfolio">
+            <!-- <div class="col-md-3 img-portfolio">
                 <a href="portfolio-item.html">
                     <img class="img-responsive img-hover" src="http://placehold.it/450x450" alt="">
                 </a>
 			<h4> Hackathon </h4>
 			<p> 30 november 2016 <br />
 			ABN AMRO Eindhoven, Vestdijk 18. </p>
-            </div>
+            </div> -->
         </div>
         <!-- /.row -->
 
