--- a/vacancy-registration.html
+++ b/vacancy-registration.html
@@ -106,42 +106,43 @@
 		<div class="row">
             <div class="col-md-4">
                 <h3>Registration</h3>
-                <form name="sentMessage" id="contactForm" novalidate>
+                <form method="post" action="mailto:talentspottingabnamro@outlook.com?subject=Mijn%20Registratie" enctype="text/plain" name="sentMessage" id="contactForm" novalidate>
                     <div class="control-group form-group">
 						<a href="#">
 							<img class="img-responsive img-hover" src="images/Apply-Large---Default.png" alt="" width=205 height=40>
 						</a>
                         <div class="controls">
                             <label>Naam:</label>
-                            <input type="text" class="form-control" id="name" required data-validation-required-message="Please enter your name.">
+                            <input type="text" class="form-control" name="name" id="name" required data-validation-required-message="Please enter your name.">
                             <p class="help-block"></p>
                         </div>
                     </div>
                     <div class="control-group form-group">
                         <div class="controls">
                             <label>Telefoonnummer:</label>
-                            <input type="tel" class="form-control" id="phone" required data-validation-required-message="Please enter your phone number.">
+                            <input type="tel" class="form-control" name="phone" id="phone" required data-validation-required-message="Please enter your phone number.">
                         </div>
                     </div>
                     <div class="control-group form-group">
                         <div class="controls">
                             <label>E-mailadres:</label>
-                            <input type="email" class="form-control" id="email" required data-validation-required-message="Please enter your email address.">
+                            <input type="email" class="form-control" name="email" id="email" required data-validation-required-message="Please enter your email address.">
                         </div>
                     </div>
                     <div class="control-group form-group">
                         <div class="controls">
                             <label>Motivatie:</label>
-                            <textarea rows="10" cols="100" class="form-control" id="message" required data-validation-required-message="Please enter your message" maxlength="999" style="resize:none"></textarea>
+                            <textarea rows="10" cols="100" class="form-control" name="message" id="message" required data-validation-required-message="Please enter your message" maxlength="999" style="resize:none"></textarea>
                         </div>
                     </div>
 					<p>
 					Upload je cv hier:<br>
-					<input type="file" name="datafile" size="40">
+					<input type="file" id="datafile" size="40">
 					</p>
-                    <div id="success"></div>
+                    <!--<div id="success"></div>-->
                     <!-- For success/fail messages -->
-                    <button type="submit" class="btn btn-primary">Submit</button>
+					<input type="submit">
+                    <!-- <button type="submit" class="btn btn-primary">Submit</button> -->
                 </form>
             </div>
 
@@ -168,7 +169,7 @@
     <!-- Bootstrap Core JavaScript -->
     <script src="js/bootstrap.min.js"></script>
     <script src="js/jqBootstrapValidation.js"></script>
-    <script src="js/contact_me.js"></script>
+    <!--<script src="js/contact_me.js"></script>-->
 </body>
 
 </html>
