Update Activity registration to be like vacancy registration

--- a/activities.html
+++ b/activities.html
@@ -121,7 +121,7 @@
 					Wanneer: 1 december 2016
 					<br>Waar: ABN AMRO Eindhoven, Vestdijk 18.
 					</p>
-					<a class="btn btn-primary" href="activity-item.html">View Project</i></a>
+					<a class="btn btn-primary" href="activity-inhouse.html">View Project</i></a>
 				</div>
 			</div>
 		</div>
@@ -142,7 +142,7 @@
 					<h3>Project One</h3>
 					<h4>Subheading</h4>
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium veniam exercitationem expedita laborum at voluptate. Labore, voluptates totam at aut nemo deserunt rem magni pariatur quos perspiciatis atque eveniet unde.</p>
-					<a class="btn btn-primary" href="activity-item.html">View Project</i></a>
+					<a class="btn btn-primary" href="activity-business.html">View Project</i></a>
 				</div>
 			</div>
 		</div>
@@ -164,7 +164,7 @@
 					<h3>Project One</h3>
 					<h4>Subheading</h4>
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium veniam exercitationem expedita laborum at voluptate. Labore, voluptates totam at aut nemo deserunt rem magni pariatur quos perspiciatis atque eveniet unde.</p>
-					<a class="btn btn-primary" href="activity-item.html">View Project</i></a>
+					<a class="btn btn-primary" href="activity-meetgreet.html">View Project</i></a>
 				</div>
 			</div>
 		</div>
