--- a/activity-inhouse.html
+++ b/activity-inhouse.html
@@ -109,14 +109,20 @@
 			<div class="row">
 				<div class="col-md-8">
 					<div class="thumbnail">
-						<a href="activity-item.html">
-							<img class="img-responsive img-hover" src="http://placehold.it/700x300" alt="">
-						</a>
+						<div>
+						<img class="img-responsive img-hover" src="http://placehold.it/800x300" alt="">
+						</div>
+						<div> 
+						<h2> Title </h2> 
 						<p>
 						Lots of text 
 						</p> 
-						<a class="btn btn-primary" href="activity-registration.html">Apply</i></a>
+						</div> 
+						<center>
+							<a class="btn btn-primary" href="activity-registration.html">Apply</i></a>
+						</center>
 					</div>
+					<!--
 					<div class="thumbnail">
 						<h2> Previous hackathons </h2>
 						<div class="row">
@@ -140,6 +146,7 @@
 							</div>
 						</div>
 					</div>
+					-->
 				</div>
 				
 				<div class="col-md-4">
