--- a/activity-item.html
+++ b/activity-item.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Talent Spotting</title>
+    <title>Business Courses</title>
     <link href="css/talent spotting.css" rel="stylesheet">
 
     <!-- Bootstrap Core CSS -->
