--- a/vacancies.html
+++ b/vacancies.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Talent Spotting</title>
+    <title>Vacancies</title>
     <link href="css/talent spotting.css" rel="stylesheet">
 
     <!-- Bootstrap Core CSS -->
