job title on homepage

--- a/index.html
+++ b/index.html
@@ -201,7 +201,17 @@
             <div class="col-md-4 text-center">
                 <div class="thumbnail">
                     <div class="caption">
-                        <h3>John Smith<br>
+                        <h3>Bankier van morgen<br>
+                            <small>Commerciële enthousiaste teamplayer met de wil en het vermogen om te ontwikkelen.</small>
+                        </h3>
+                        <p>Commerciële enthousiaste teamplayer met de wil en het vermogen om te ontwikkelen.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 text-center">
+                <div class="thumbnail">
+                    <div class="caption">
+                        <h3>Starterprogramma relatiemanagement<br>
                             <small>Job Title</small>
                         </h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste saepe et quisquam nesciunt maxime.</p>
@@ -211,17 +221,7 @@
             <div class="col-md-4 text-center">
                 <div class="thumbnail">
                     <div class="caption">
-                        <h3>John Smith<br>
-                            <small>Job Title</small>
-                        </h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste saepe et quisquam nesciunt maxime.</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4 text-center">
-                <div class="thumbnail">
-                    <div class="caption">
-                        <h3>John Smith<br>
+                        <h3>Relatie Manager Klein Zakelijk<br>
                             <small>Job Title</small>
                         </h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste saepe et quisquam nesciunt maxime.</p>
