--- a/index.html
+++ b/index.html
@@ -188,30 +188,27 @@
             <div class="col-md-4 text-center">
                 <div class="thumbnail">
                     <div class="caption">
-                        <h3>Bankier van morgen<br>
-                            <small>Commerciële enthousiaste teamplayer met de wil en het vermogen om te ontwikkelen.</small>
-                        </h3>
-                        <p>Commerciële enthousiaste teamplayer met de wil en het vermogen om te ontwikkelen.</p>
+                        <h3>Bankier van <br>morgen</h3>
+                        <p><i class="fa fa-calendar-o" aria-hidden="true"></i>Full time baan</p>
+                        <p><i class="fa fa-thumb-tack" aria-hidden="true"></i>Eindhoven, Vestdijk 18</p>
                     </div>
                 </div>
             </div>
             <div class="col-md-4 text-center">
                 <div class="thumbnail">
                     <div class="caption">
-                        <h3>Starterprogramma relatiemanagement<br>
-                            <small>Job Title</small>
-                        </h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste saepe et quisquam nesciunt maxime.</p>
+                        <h3>Starterprogramma relatiemanagement</h3>
+						<p><i class="fa fa-calendar-o" aria-hidden="true"></i>Starterprogramma</p>
+                        <p><i class="fa fa-thumb-tack" aria-hidden="true"></i>Eindhoven, Vestdijk 18</p>
                     </div>
                 </div>
             </div>
             <div class="col-md-4 text-center">
                 <div class="thumbnail">
                     <div class="caption">
-                        <h3>Relatie Manager Klein Zakelijk<br>
-                            <small>Job Title</small>
-                        </h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste saepe et quisquam nesciunt maxime.</p>
+                        <h3>Relatie Manager Klein Zakelijk</h3>
+                        <p><i class="fa fa-calendar-o" aria-hidden="true"></i>Full time baan</p>
+                        <p><i class="fa fa-thumb-tack" aria-hidden="true"></i>Eindhoven, Vestdijk 18</p>
                     </div>
                 </div>
             </div>
