--- a/activities.html
+++ b/activities.html
@@ -108,6 +108,7 @@
 			<div class="row">
 				<div class="col-md-3">
 					<a href="activity-inhouse.html">
+						<img class="img-responsive img-hover" src="images/square-inhouse.jpg" alt="">
 					</a>
 				</div>
 				<div class="col-md-6">
