--- a/vacancies.html
+++ b/vacancies.html
@@ -133,7 +133,7 @@
         <!-- Project One -->
 		<div class="thumbnail">
 			<div class="row">
-				<div class="col-md-9">
+				<div class="col-md-9 vacancybox">
 					<h3>Starterprogramma relatiemanagement</h3>
 					<h4>Toekomstgerichte starter die zichzelf vakinhoudelijk en projectmatig wil ontwikkelen.</h4>
 					<p> Je hebt je studie afgerond en bent klaar om aan je carrière te beginnen. Binnen ons startersprogramma leer je de skils om te gaan werken binnen de financiële sector. Tegelijkertijd wordt je uitgedaagd en geïnspireerd door te werken aan de bank van morgen . Ben je ambitieus, kritisch en wil je jezelf zo goed mogelijk ontwikkelen, dan hebben we de ideale functie voor jou.</p>
